--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.19.1",
     "morgan": "^1.10.0",
     "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.11",
     "paystack": "^2.0.1",
     "pino": "^9.3.2",
     "pino-http": "^10.3.0"
