--- a/backend/cpanel-deployment/package.json
+++ b/backend/cpanel-deployment/package.json
@@ -25,8 +25,7 @@
     "nodemailer": "^7.0.11",
     "paystack": "^2.0.1",
     "pino": "^9.3.2",
-    "pino-http": "^10.3.0",
-    "resend": "^6.5.2"
+    "pino-http": "^10.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
